--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -103,14 +103,14 @@
             const ENVIRONMENT = '<%= ENV['ENVIRONMENT'] %>';
             const PORT = '<%= ENV['PORT'] %>' || 3000;
             const WEBSOCKET_ENDPOINT_PROD = 'wss://text-adventure'
-            const WEBSOCKET_ENDPOINT_DEV = 'ws://localhost'
+            const WEBSOCKET_ENDPOINT_DEV = `ws://localhost:${PORT}`
 
             var ws;
             var typingTimer;
             var doneTypingInterval = 300; // Time in ms (0.3 seconds)
 
             function connect() {
-                ws = new WebSocket(`${ENVIRONMENT === 'production' ? WEBSOCKET_ENDPOINT_PROD : WEBSOCKET_ENDPOINT_DEV}:${PORT}/socket`);
+                ws = new WebSocket(`${ENVIRONMENT === 'production' ? WEBSOCKET_ENDPOINT_PROD : WEBSOCKET_ENDPOINT_DEV}/socket`);
 
                 ws.onopen = function (event) {
                     console.log('WebSocket opened');
