add ws closed log

--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -130,7 +130,7 @@
                 };
 
                 ws.onclose = function (event) {
-                    console.log('WebSocket closed');
+                    console.log('WebSocket closed', event);
                 };
             }
 
