--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Text Adventure</title>
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" crossorigin="use-credentials" href="/favicon/site.webmanifest">
+        <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
+
         <style>
             body {
                 background-color: black;
